fix(ui): navbar item text wrapping

--- a/ui/css/navbar.css
+++ b/ui/css/navbar.css
@@ -25,6 +25,10 @@
 
 	align-items: center;
 	justify-content: center;
+
+	white-space: nowrap;
+
+	padding: 0px 5px;
 }
 
 .navbar .item:hover
